fixing layout problem with two separate columns

--- a/app/stylesheets/application.sass
+++ b/app/stylesheets/application.sass
@@ -34,6 +34,9 @@
   #twitter_create_list_form
     display: none
 
+  .left-column, .right-column
+    float: left
+
 .category, #hashtag_filter, .modal, .users_list, .lists_list, #category_show
   background: #bfd9e6
   margin-top: 10px
@@ -189,6 +192,10 @@
         padding: 1px
         width: 48px
         height: 48px
+
+.category
+  float: none
+  
 
 #hashtag_filter
   +grid(7,23)
